@@ -1,0 +1,2 @@
+val set_print_ref : Globnames.global_reference -> unit
+val is_print_ref : Constr.constr -> bool
