@@ -301,6 +301,24 @@ Defined.
 Hint Resolve left right inleft inright: core v62.
 Hint Resolve exist exist2 existT existT2: core.
 
+(**********************************************************************)
+(* The following defines two printing functions and commands to       *)
+(* activate them                                                      *)
+(**********************************************************************)
+
+(** [print] is a function intended for printing terms *)
+
+Definition print {X} (x : X) := tt.
+
+(** The same, but with an "identity" computational behavior *)
+
+Definition print_id {X} (x : X) := x.
+
+(** These commands trigger [print] and [print_id]'s side effect behavior *)
+
+Declare Printing Effect print.
+Declare Printing Effect print_id.
+
 (* Compatibility *)
 
 Notation sigS := sigT (compat "8.2").
