@@ -12,6 +12,7 @@ Classes
 Record
 Assumptions
 Vernacinterp
+Extravernac
 Mltop
 Vernacentries
 Vernac
